--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--html lang="en">
+<html lang="en">
 
 <head>
   <!-- Required meta tags -->
@@ -485,7 +485,7 @@
       <div class="main-panel">
         <div class="content-wrapper">
 
-          <!--div class="row">
+          <div class="row">
             <div class="col-xl-6 grid-margin stretch-card flex-column">
                 <h5 class="mb-2 text-titlecase mb-4">Status statistics</h5>
               <div class="row">
@@ -887,7 +887,7 @@
             </div>
           </div>
 
-        </div-->
+        </div>
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         
